<resources>
    <!--app_String-->
    <string name="app_name">趣组队</string>
    <!--<string name="edt_username_value">请输入用户名</string>-->
    <!--<string name="edt_password_value">请输入密码</string>-->
    <!--<string name="edt_account_value">请输入账号</string>-->
    <string name="loginActivity_value">登陆</string>
    <string name="registerActivity_value">注册</string>
    <string name="btn_submit_value">确认</string>
    <string name="textview_register_value">请选择性别</string>
    <string name="tv_forgetPassword_value">忘记密码</string>
    <string name="btn_man_value">男</string>
    <string name="btn_girl_value">女</string>
    <string name="hint_input">请输入内容</string>
    <string name="confirm">确定</string>
    <!--底部栏内容-->
    <string name="bottom_highlight_value">精彩活动</string>
    <string name="bottom_publish_value">发布活动</string>
    <string name="bottom_me_value">个人中心</string>
    <!--发布活动-->
    <string name="btn_custom_value">自定义</string>
    <string name="btn_party_value">节日派对</string>
    <string name="btn_board_game">桌游</string>
    <string name="btn_escape_game_value">密室逃脱</string>
    <string name="btn_sport_value">运动</string>
    <string name="btn_film_value">电影</string>
    <string name="btn_eating_value">聚餐</string>
    <string name="btn_study_value">学习</string>
    <string name="btn_history_value">历史纪录</string>
    <string name="edt_details_value">活动详情</string>
    <!--个人中心-->
    <string-array name="me_titles">
        <item>我发起的</item>
        <item>邀请我的</item>
    </string-array>
</resources>
